# packages/open-api/karakeep-openapi-spec.json
@@ -514,6 +514,10 @@
               "viewer",
               "public"
             ]
+          },
+          "position": {
+            "type": "integer",
+            "default": 0
           }
         },
         "required": [
